Fixed nested list spacing

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -339,7 +339,7 @@ ol ol,
 ul ul,
 ul ol,
 ol ul {
-    margin: 0.5em 0 1em;
+    margin: 0.5em 0;
 }
 
 ul,
